# comp_hack

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CTestConfig.cmake  LICENSE.txt  MariaDBTestSetup.sql  README.md  index.html  vsbuild_x64.bat  vsbuild_x86.bat
client/: CMakeLists.txt
client/src/: GameWorker.cpp  GameWorker.h  LobbyScene.cpp  LobbyScene.h  LoginDialog.cpp  LoginDialog.h  main.cpp
client/ui/: CharacterListItem.ui  LobbyScene.ui  LoginDialog.ui
libclient/: CMakeLists.txt
libclient/src/: ChannelClient.cpp  ChannelClient.h  ClientManager.h  ConnectionManager.cpp  ConnectionManager.h  LobbyClient.cpp  LobbyClient.h  LobbyManager.cpp  LobbyManager.h  LogicWorker.cpp  LogicWorker.h  MessageClient.h  MessageConnected.h  MessageConnectionInfo.h
libcomp/: CMakeLists.txt
libcomp/doc/: Doxyfile.in  MainPage.dox
libcomp/schema/: account.xml  accountlogin.xml  action.xml  action_addremoveitems.xml  action_addremovestatus.xml  action_createloot.xml  action_delay.xml  action_displaymessage.xml  action_grantskills.xml  action_grantxp.xml  action_homepoint.xml  action_playbgm.xml  action_playsoundeffect.xml  action_runscript.xml  action_setnpcstate.xml  action_spawn.xml  action_specialdirection.xml  action_stageeffect.xml  action_startevent.xml  action_updatecomp.xml  action_updateflag.xml  action_updatelnc.xml  action_updatepoints.xml  action_updatequest.xml  action_updatezoneflags.xml  action_zonechange.xml  action_zoneinstance.xml  ailogic.xml  channelconfig.xml  channeldescription.xml  character.xml  clan.xml  databaseconfig.xml  databaseconfig_cassandra.xml  databaseconfig_mariadb.xml  databaseconfig_sqlite3.xml  demon.xml  enemy.xml  event.xml  event_direction.xml  (+40 more)
libcomp/schema/binarydata/: aidata.xml  (+82 more)
libcomp/src/: ArgumentParser.cpp  ArgumentParser.h  BaseServer.cpp  BaseServer.h  BinaryDataSet.cpp  BinaryDataSet.h  CString.cpp  CString.h  ChannelConnection.cpp  ChannelConnection.h  Child.cpp  Child.h  Compress.cpp  Compress.h  Config.cpp  Config.h  ConnectionMessage.h  Constants.h  Constants.h.in  Convert.cpp  Convert.h  DataFile.cpp  DataFile.h  DataStore.cpp  DataStore.h  DataSyncManager.cpp  DataSyncManager.h  Database.cpp  Database.h  DatabaseBind.cpp  DatabaseBind.h  DatabaseCassandra.cpp  DatabaseCassandra.h  DatabaseChangeSet.cpp  DatabaseChangeSet.h  DatabaseMariaDB.cpp  DatabaseMariaDB.h  DatabaseQuery.cpp  DatabaseQuery.h  DatabaseQueryCassandra.cpp  (+126 more)
libcomp/tests/: Cassandra.cpp  Decrypt.cpp  GeneratedObjects.cpp  MariaDB.cpp  ScriptEngine.cpp  String.cpp  VectorStream.cpp
libconfig/: CMakeLists.txt
libconfig/src/: ConfigLogVersion.cpp  Git.h.in
libobjgen/: CMakeLists.txt
libobjgen/res/: VariableAccessScriptBindings.cpp  VariableArrayAccessDeclarations.cpp  VariableArrayAccessFunctions.cpp  VariableArrayAccessScriptBindings.cpp  VariableArrayLoad.cpp  VariableArraySave.cpp  VariableArrayUtilityFunctions.cpp  VariableArrayValidCondition.cpp  VariableArrayXmlLoad.cpp  VariableArrayXmlSave.cpp  VariableBoolLoad.cpp  VariableBoolSave.cpp  VariableBoolXmlLoad.cpp  VariableBoolXmlSave.cpp  VariableDatabaseBlobLoad.cpp  VariableDatabaseCastLoad.cpp  VariableDatabaseIndirectRefLoad.cpp  VariableDatabaseLoad.cpp  VariableDatabaseRefLoad.cpp  VariableEnumAccessDeclarations.cpp  VariableEnumAccessFunctions.cpp  VariableEnumAccessScriptBindings.cpp  VariableEnumLoad.cpp  VariableEnumUtilityDeclarations.cpp  VariableEnumUtilityFunctions.cpp  VariableEnumXmlLoad.cpp  VariableEnumXmlSave.cpp  VariableGetBind.cpp  VariableGetCastBind.cpp  VariableGetTypeBind.cpp  VariableIndirectReferenceLoad.cpp  VariableIndirectReferenceLoadRaw.cpp  VariableIndirectReferenceSave.cpp  VariableIndirectReferenceSaveRaw.cpp  VariableIndirectReferenceXmlLoad.cpp  VariableIndirectReferenceXmlSave.cpp  VariableIntLoad.cpp  VariableIntSave.cpp  VariableIntXmlLoad.cpp  VariableIntXmlSave.cpp  (+65 more)
libobjgen/src/: CombinationKey.cpp  CombinationKey.h  Generator.cpp  Generator.h  GeneratorFactory.cpp  GeneratorFactory.h  GeneratorHeader.cpp  GeneratorHeader.h  GeneratorSource.cpp  GeneratorSource.h  MetaObject.cpp  MetaObject.h  MetaObjectXmlParser.cpp  MetaObjectXmlParser.h  MetaVariable.cpp  MetaVariable.h  MetaVariableArray.cpp  MetaVariableArray.h  MetaVariableBool.cpp  MetaVariableBool.h  MetaVariableEnum.cpp  MetaVariableEnum.h  MetaVariableInt.cpp  MetaVariableInt.h  MetaVariableList.cpp  MetaVariableList.h  MetaVariableMap.cpp  MetaVariableMap.h  MetaVariableReference.cpp  MetaVariableReference.h  MetaVariableSet.cpp  MetaVariableSet.h  MetaVariableString.cpp  MetaVariableString.h  UUID.cpp  UUID.h
libobjgen/tests/: MetaObject.cpp  MetaVariable.cpp  UUID.cpp
libpackets/: CMakeLists.txt
libpackets/schema/: libpackets-master.xml  packet_auth.xml  packet_auth_reply.xml  packet_login.xml  packet_login_reply.xml  packet_worldlist.xml
libtester/: CMakeLists.txt
libtester/src/: ChannelClient.cpp  ChannelClient.h  ChannelClient_HandleAmalaAccountDumpHeader.cpp  ChannelClient_HandleAmalaAccountDumpPart.cpp  ChannelClient_HandleAmalaServerVersion.cpp  ChannelClient_HandleCharacterData.cpp  ChannelClient_HandleDemonBoxData.cpp  ChannelClient_HandleZoneChange.cpp  HttpConnection.cpp  HttpConnection.h  LobbyClient.cpp  LobbyClient.h  Login.cpp  Login.h  ServerTest.cpp  ServerTest.h  TestClient.cpp  TestClient.h  TestConfig.h
libtester/tests/: ChannelLogin.cpp  Lobby.cpp
server/channel/: CMakeLists.txt
server/lobby/: CMakeLists.txt
server/world/: CMakeLists.txt
tools/: CMakeLists.txt
tools/bdpatch/: CMakeLists.txt
tools/bgmtool/: CMakeLists.txt
tools/capfilter/: CMakeLists.txt
tools/capgrep/: CMakeLists.txt
tools/cathedral/: CMakeLists.txt
tools/decrypt/: CMakeLists.txt
tools/encrypt/: CMakeLists.txt
tools/logger/: CMakeLists.txt
tools/manager/: CMakeLists.txt
tools/map/: CMakeLists.txt
tools/nifcrypt/: CMakeLists.txt
tools/objgen/: CMakeLists.txt
tools/patcher/: CMakeLists.txt
tools/rehash/: CMakeLists.txt
tools/updater/: CMakeLists.txt
tools/verify/: CMakeLists.txt
(+3737 files in other folders)
